--- a/VLaboralWeb/App/EtapasOferta/Partials/postulacionDetalleDialog.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/postulacionDetalleDialog.html
@@ -24,12 +24,27 @@
                 </div>
                 <md-input-container>
                     <label>Comentario</label>
-                    <input md-maxlength="200" required md-no-asterisk ng-model="postulacionShow.Comentario">
+                    <input md-maxlength="200" ng-model="postulacionShow.Comentario">
                 </md-input-container>
                 <md-input-container>
+                    <label>Puntaje</label>
+                    <md-select ng-model="postulacionShow.Valoracion">
+                        <md-option>1</md-option>
+                        <md-option>2</md-option>
+                        <md-option>3</md-option>
+                        <md-option>4</md-option>
+                        <md-option>5</md-option>
+                        <md-option>6</md-option>
+                        <md-option>7</md-option>
+                        <md-option>8</md-option>
+                        <md-option>9</md-option>
+                        <md-option>10</md-option>
+                    </md-select>
+                </md-input-container>
+                <!--<md-input-container>
                     <label>Valoración</label>
                     <input md-maxlength="2" required md-no-asterisk ng-model="postulacionShow.Valoracion">
-                </md-input-container>
+                </md-input-container>-->
                 <md-input-container>
                     <label>Aprueba Etapa</label>
                     <md-checkbox ng-model="postulacionShow.PasaEtapa">
