--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -1,6 +1,18 @@
 ﻿<nav>
     <a>UN<span>MUNDO</span></a>
     <ul>
+        <li>
+            <md-menu>
+                <md-button ng-click="$mdOpenMenu($event)" layout="row">
+                    <span class="icon-bullhorn ic_m"></span><h1 class="t_me_a">Postulaciones</h1>
+                </md-button>
+                <md-menu-content width="3">
+                    <md-menu-item>
+                        <a ui-sref="profesional.postulaciones.historial"><md-button> <span md-menu-align-target class="sm">Mis Postulaciones</span></md-button></a>
+                    </md-menu-item>
+                </md-menu-content>
+            </md-menu>
+        </li>
         <!-- desplegable: ezequiel-->
         <li>
             <md-menu>
