historial de postulaciones y ofertas

--- a/VLaboralWeb/App/Postulaciones/Partials/historialPostulaciones.html
+++ b/VLaboralWeb/App/Postulaciones/Partials/historialPostulaciones.html
@@ -5,11 +5,24 @@
         </md-toolbar>-->
         <h1 class="md-toolbar-tools">Filtrar</h1>
         <md-content layout-padding layout="column">
+            <label>Estado</label>
             <md-checkbox>Finalizada</md-checkbox>
+            <md-checkbox>En contratacion</md-checkbox>
             <md-divider></md-divider>
             <label>Tipos de Oferta</label>
             <md-checkbox>Publicas</md-checkbox>
             <md-checkbox>Privadas</md-checkbox>
+            <md-divider></md-divider>
+            <label>Fecha de Oferta</label>
+            <md-checkbox>Ultima semana</md-checkbox>
+            <md-checkbox>Ultimo mes</md-checkbox>
+            <md-checkbox>Ultimo año</md-checkbox>
+            <md-divider></md-divider>
+            <label>Ordenar</label>
+            <md-checkbox>Nombre A-Z</md-checkbox>
+            <md-checkbox>Nombre Z-A</md-checkbox>
+            <md-divider></md-divider>
+            <md-button>Buscar</md-button>
         </md-content>
     </md-sidenav>
     <div flex>
