llamada a modal de listado de profesionales con parametros

--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesList.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesList.html
@@ -52,7 +52,7 @@
                                 </thead>
                                 <tbody md-body>
                                     <tr md-row
-                                        md-select="profesional"
+                                        md-select="selectedPro"
                                         md-auto-select="true"
                                         ng-repeat="profesional in profesionalesList | filter:search | orderBy:query.order | limitTo: query.limit : (query.page -1) * query.limit">
 
