agrego routing para el listado de profesionales que puede consultar la empresa y llamado al modal del listado de profesionales en la carga de ofertas privadas

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -48,7 +48,7 @@
                 <!--#region Listado profesionales-->
                 <div layout="column" flex="70" layout-padding layout-align="center center" ng-show="oferta.Publica =='false'">
                     
-                     <md-button class="md-primary md-raised">Agregar profesionales</md-button>
+                     <md-button class="md-primary md-raised" ng-click="profesionalesAdd()">Agregar profesionales</md-button>
                     
                 </div>
                 <div div layout="column" ng-show="listadoProfesionales !=null">
