cambios en los centros de notificaciones

--- a/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
+++ b/VLaboralWeb/App/Notificaciones/Partials/centroNotificaciones.html
@@ -30,7 +30,7 @@
                     <div flex ng-hide="mostrarDetalle">
                         Seleccione un mensaje
                     </div>
-                    <div flex ui-view="detalleNotificacion" ng-hide="!mostrarDetalle"></div>
+                    <div flex ui-view="detalleNotificacion"></div>
                 </md-content>
             </md-tab>
 
