--- a/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
+++ b/VLaboralWeb/App/DashboardProfesional/Partials/profesionalDashboard.html
@@ -30,22 +30,31 @@
 
         <li>
             <md-menu>
-                <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
-                    <notification-icon animation="grow" count="notificaciones.all.length">
+                <md-button flex ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+                    <notification-icon animation="grow" count="countNotifNoLeidas()">
+                        {{countNotifNoLeidas()}}
                         <i class="fa fa-globe fa-2x"></i>
                     </notification-icon>
                 </md-button>
                 <md-menu-content>
-                    <md-menu-item ng-repeat="n in notificaciones.all">
-                        <h4>{{n.TipoNotificacion.Descripcion}}</h4>
-                        <md-button ng-click="doSomething()">Do Something</md-button>
+                    <md-menu-item ng-repeat="n in notificaciones.all" layout="column" ng-style="n.FechaLectura == null ? {'background-color': 'aliceblue'} : {'background-color': 'white'}" style="min-height:100px">
+                        <div class="notis_info">
+                            <div class="ni1" layout="column">
+                                <h5>{{n.TipoNotificacion.Descripcion}}</h5>
+                                <h6>{{n.Mensaje}}</h6>
+                                <h6>{{n.FechaPublicacion | date:'medium'}}</h6>
+                                <md-button ng-click="verDetalleNotif(n.Id, n.TipoNotificacion.Valor)" layout-align="center center">Ver Detalle</md-button>
+                                <md-divider></md-divider>
+                            </div>
+
+                        </div>
+
                     </md-menu-item>
-                    <md-menu-item>
-                        <md-button ui-sref="profesional.centroNotificaciones">Ver Todas</md-button>
-                    </md-menu-item>
+                    <md-button ui-sref="profesional.centroNotificaciones">Ver Todas</md-button>                    
                 </md-menu-content>
             </md-menu>
         </li>
+
         <li>
             <md-menu>
                 <md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
