correcciones en el alta de ofertas privadas con invitados

--- a/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
+++ b/VLaboralWeb/App/Ofertas/Partials/ofertasAdd.html
@@ -51,7 +51,7 @@
                      <md-button class="md-primary md-raised" ng-click="profesionalesAdd()">Agregar profesionales</md-button>
                     
                 </div>
-                <div div layout="column" ng-show="listadoProfesionales !=null">
+                <div div layout="column" ng-show="postulantes !=null">
 
                     <md-card>
                         <md-toolbar>
