--- a/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
+++ b/VLaboralWeb/App/Profesionales/Partials/profesionalesDialogList.html
@@ -124,7 +124,7 @@
         <!-- #endregion -->
         <md-dialog-actions layout="row" class="bg-primary">
             <span flex></span>
-            <md-button class="md-raised" ng-hide="edit" ng-click="guardarLista(selectedItem)">Guardar</md-button>
+            <md-button class="md-raised" ng-click="guardarLista(selectedItems)">Guardar</md-button>
             <md-button class="md-raised md-shadow-animated" style="margin-right:20px;" ng-click="closeDialog()">Cancelar</md-button>
         </md-dialog-actions>
     </md-dialog-content>
